# UnitedSystem

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENCE  MANIFEST.in  MODULAR_REFACTORING_NEXT_STEPS.md  MODULAR_RESTRUCTURE_PLAN.md  NAMING_CONVENTIONS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  RELEASE_CHECKLIST.md  correctness_test_seperate_string.py  debug_complex_division.py  debug_failing_tests.py  debug_formatting.py  debug_j_w.py  debug_log_detection.py  debug_normalization.py  debug_reduce_unit_elements.py  debug_reduce_unit_elements_simple.py  debug_reduction.py  debug_seperate_string.py  debug_specific_test.py  debug_unit_parsing.py  debug_w_per_m.py  extreme_stress_test.py  naming_refactor_example.py  pyproject.toml  pyrightconfig.json  pytest_output.txt  quick_start_refactor.py  real_scalar_example.py  refactoring_example_united_dataframe.py  start_modular_refactor.py  stress_test_seperate_string.py  test_all_log_functions.py  test_arithmetic_mixin.py  test_arithmetic_mixin_direct.py  (+23 more)
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
docs/: github-setup.md
src/depreciated/: bool_array.py  complex_array.py  dimension.py  float_array.py  int_array.py  real_united_array_depreciated.py  real_united_scalar_depreciated.py  string_array.py  timestamp_array.py  unit.py  united_dataframe_original.py
src/united_system/: __init__.py  bool_array.py  column_key.py  column_type.py  complex_array.py  complex_united_array.py  complex_united_scalar.py  dimension.py  float_array.py  int_array.py  math.py  named_dimensions.py  named_quantity.py  real_array.py  real_scalar.py  real_united_array.py  real_united_scalar.py  simple_united_array.py  simple_united_scalar.py  string_array.py  timestamp_array.py  unit.py  united_array.py  united_dataframe.py  united_dataframe_original.py  united_scalar.py  utils.py
src/united_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/united_system/arrays/: __init__.py  bool_array.py  complex_array.py  complex_united_array.py  datetime_array.py  float_array.py  int_array.py  real_united_array.py  string_array.py  timestamp_array.py  united_array.py  utils.py
src/united_system/dataframe/: __init__.py  _column_accessor.py  _group_by.py  _row_accessor.py  column_information.py  column_type.py  utils.py
src/united_system/scalars/: complex_united_scalar.py  real_united_scalar.py  united_scalar.py
src/united_system/united_dataframe/: _column_accessor.py  _group.py  _row_accessor.py  column_type.py  united_dataframe.py  united_dataframe_original.py  utils.py
src/united_system/units/: named_canonical_quantities.py  named_simple_dimensions.py  named_simple_unit_quantities.py  named_units.py  unit.py  (+7 more)
tests/: __init__.py  conftest.py  test_dataframe.py  test_dataframe_core.py  test_dataframe_operations.py  test_dataframe_serialization.py  test_dimension.py  test_non_united_arrays.py  test_real_united_array.py  test_real_united_scalar.py  test_real_united_scalar_simple.py  test_simple_unit.py  test_simple_unit_element.py  test_unit.py
united_system/: __init__.py  cli.py  py.typed
united_system/_arrays/: base_array.py  base_united_array.py  bool_array.py  complex_array.py  complex_united_array.py  float_array.py  int_array.py  non_united_array.py  protocol_numerical_array.py  real_united_array.py  string_array.py  timestamp_array.py
united_system/_dataframe/: __init__.py  column_key.py  column_type.py  internal_dataframe_name_formatter.py  united_dataframe.py
united_system/_scalars/: base_scalar.py  complex_united_scalar.py  real_united_scalar.py  united_scalar.py
united_system/_units_and_dimension/: dimension.py  dimension_symbol.py  has_unit_protocol.py  named_quantity.py  proper_exponents.py  reduce_unit_elements.py  unit.py  unit_element.py  unit_prefixes.py  unit_symbol.py  united.py  utils.py
united_system/_utils/: array_type.py  general.py  scalar_type.py  string_utils.py  value_type.py
(+152 files in other folders)
